load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "vcs",
    srcs = ["url.go"],
    importpath = "github.com/sourcegraph/sourcegraph/internal/vcs",
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_grafana_regexp//:regexp",
        "@com_github_sourcegraph_sourcegraph_lib//errors",
    ],
)

go_test(
    name = "vcs_test",
    srcs = ["url_test.go"],
    embed = [":vcs"],
)
